--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-jshint": "~0.7.0",
+    "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3"
+  },
+  "dependencies": {
+    "mocha": "^10.2.0"
   }
 }
