--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         proxy_key: ${{ secrets.SSH_KEY_PROXY }}
         script: |
           # git update to latest codebase on main branch
-          cd /root/workspace/assembler-simulator && git pull
+          cd /root/workspace/assembler-simulator && git fetch --all && git reset --hard origin/master && git pull
           # updating the .env file
           cd
           bash start_nginx.sh
