--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Deploy via SSH
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@v1.0.1
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
@@ -19,8 +19,6 @@ jobs:
         proxy_key: ${{ secrets.SSH_KEY_PROXY }}
         script: |
           # git update to latest codebase on main branch
-          cd /root/workspace/assembler-simulator && git fetch --all && git reset --hard origin/master && git pull
-          # updating the .env file
-          cd
-          bash start_nginx.sh
+          cd /shared_data/assembler-simulator && git fetch --all && git reset --hard origin/master && git pull
+          systemctl enable nginx
           
